@@ -6,6 +6,7 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.awt.*;
+import java.lang.reflect.Field;
 
 public class Drawer implements ModInitializer {
 	public static final Logger LOGGER = LogManager.getLogger("drawer");
@@ -23,6 +24,15 @@ public class Drawer implements ModInitializer {
 	@Override
 	public void onInitialize() {
 		System.setProperty("java.awt.headless","false");
-		LOGGER.info("Drawer by ayunami2000 initialized!");
+		System.out.println("If the game crashes after this message, please add `--add-opens=java.desktop/java.awt=ALL-UNNAMED` as a command-line argument!!");
+		try {
+			Field prop = GraphicsEnvironment.class.getDeclaredField("headless");
+			prop.setAccessible(true);
+			prop.set(null, Boolean.FALSE);
+			GraphicsEnvironment.isHeadless();
+		} catch (NoSuchFieldException | IllegalAccessException e) {
+			e.printStackTrace();
+		}
+        LOGGER.info("Drawer by ayunami2000 initialized!");
 	}
 }
